--- a/package.json
+++ b/package.json
@@ -1,39 +1,33 @@
 {
-  "name": "nuxt-app",
+  "name": "gallery-nuxt",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev --host 0.0.0.0",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxtjs/i18n": "^8.0.0-rc.7",
-    "@nuxtseo/module": "^2.0.0-beta.46",
+    "@nuxtjs/i18n": "^8.0.0",
+    "@nuxtseo/module": "^2.0.0-beta.55",
     "@types/spark-md5": "^3.0.4",
-    "nuxt": "^3.8.0",
-    "nuxt-quasar-ui": "^2.0.6",
-    "sass": "^1.69.5",
-    "vue": "^3.3.7",
+    "nuxt": "^3.9.3",
+    "nuxt-quasar-ui": "^2.0.7",
+    "sass": "^1.70.0",
+    "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.5.1",
-    "@quasar/extras": "^1.16.7",
-    "@types/lru-cache": "^7.10.10",
+    "@quasar/extras": "^1.16.9",
     "@types/multer": "^1.4.11",
-    "axios": "^1.6.2",
+    "axios": "^1.6.5",
     "big.js": "^6.2.1",
-    "lru-cache": "^10.1.0",
-    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "node-uploadx": "^6.1.4",
-    "pinia": "^2.1.7",
     "postinstall": "^0.8.0",
-    "quasar": "^2.13.0",
+    "quasar": "^2.14.2",
     "spark-md5": "^3.0.2",
     "video.js": "^8.6.1"
   }
