1.优化异常提示 2.解决批量上传文件的问题

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@types/multer": "^1.4.11",
     "axios": "^1.6.5",
     "big.js": "^6.2.1",
+    "image-conversion": "^2.1.1",
     "node-fetch": "^3.3.2",
     "node-uploadx": "^6.1.4",
+    "pica": "^9.0.1",
     "postinstall": "^0.8.0",
     "quasar": "^2.14.2",
     "spark-md5": "^3.0.2",
